--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav>
+        <div class="logo"><span>Yosra</span><span>Skhiri</span></div>
+        <ul class="nav-links">
+            <li class="nav-link"><a href="#">Home</a></li>
+            <li class="nav-link"><a href="#">About me</a></li>
+            <li class="nav-link"><a href="#">Skills</a></li>
+            <li class="nav-link"><a href="#">projects</a></li>
+        </ul>
+        <svg xmlns="http://www.w3.org/2000/svg" width="31" height="19" viewBox="0 0 31 19" class="hamburger">
+            <g id="menu" transform="translate(-292 -23.5)">
+              <line id="Line_6" data-name="Line 6" x2="31" transform="translate(292 25)" stroke="#707070" stroke-width="3"/>
+              <line id="Line_6-2" data-name="Line 6" x2="31" transform="translate(292 33)" stroke="#707070" stroke-width="3"/>
+              <line id="Line_6-3" data-name="Line 6" x2="31" transform="translate(292 41)"  stroke="#707070" stroke-width="3"/>
+            </g>
+        </svg>
+    </nav>
+    <main>
+
+    </main>
 </body>
 </html>
