added the desktop version of the nav bar

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Yosra Skhiri - Junior Frontend Developer</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,10 +17,10 @@
             </g>
         </svg>
         <ul class="nav-links">
-            <li class="nav-link"><a href="#">Home</a></li>
-            <li class="nav-link"><a href="#">About me</a></li>
-            <li class="nav-link"><a href="#">Skills</a></li>
-            <li class="nav-link"><a href="#">projects</a></li>
+            <li class="nav-link"><a href="#"><span>Home</span></a></li>
+            <li class="nav-link"><a href="#"><span>About me</span></a></li>
+            <li class="nav-link"><a href="#"><span>Skills</span></a></li>
+            <li class="nav-link"><a href="#"><span>projects</span></a></li>
         </ul>
         
     </nav>
