--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
 <body>
     <nav>
         <div class="logo"><span>Yosra</span><span>Skhiri</span></div>
-        <svg xmlns="http://www.w3.org/2000/svg" width="31" height="19" viewBox="0 0 31 19" class="hamburger" id="hamburger">
-            <g id="menu" transform="translate(-292 -23.5)">
-              <line id="Line_6" data-name="Line 6" x2="31" transform="translate(292 25)" stroke="#000" stroke-width="3"/>
-              <line id="Line_6-2" data-name="Line 6" x2="31" transform="translate(292 33)" stroke="#000" stroke-width="3"/>
-              <line id="Line_6-3" data-name="Line 6" x2="31" transform="translate(292 41)"  stroke="#000" stroke-width="3"/>
-            </g>
-        </svg>
+        <div class="hamburger" id="hamburger">
+              <span id="line"></span>      
+        </div>
         <ul class="nav-links">
             <li class="nav-link"><a href="#"><span>Home</span></a></li>
             <li class="nav-link"><a href="#"><span>About me</span></a></li>
