--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <div class="logo"><span>Yosra</span><span>Skhiri</span></div>
-        <div class="hamburger" id="hamburger">
+        <div id="hamburger">
               <span id="line"></span>      
         </div>
         <ul class="nav-links">
