most of the desktop version is done

--- a/index.html
+++ b/index.html
@@ -1,28 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yosra Skhiri - Junior Frontend Developer</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <nav>
         <div class="logo"><span>Yosra</span><span>Skhiri</span></div>
         <div id="hamburger">
-              <span id="line"></span>      
+            <span id="line"></span>
         </div>
         <ul class="nav-links">
             <li class="nav-link"><a href="#"><span>Home</span></a></li>
             <li class="nav-link"><a href="#"><span>About me</span></a></li>
             <li class="nav-link"><a href="#"><span>Skills</span></a></li>
             <li class="nav-link"><a href="#"><span>projects</span></a></li>
+            <!--<li class="social-icons">
+                <ul>
+                    <li><a href=""><img src="img/github_icon.svg" alt=""></a></li>
+                    <li><a href=""><img src="img/linkedin_icon.svg" alt=""></a></li>
+                    <li><a href=""><img src="img/mail_icon.svg" alt=""></a></li>
+                </ul>
+            </li>-->
         </ul>
-        
-    </nav>
-    <main>
 
+    </nav>
+    <main class="intro">
+        <div class="intro-text">
+            <h1 class="intro-title">Hi There !</h1>
+            <p class="intro-text">
+                My name is <strong>Yosra Skhiri</strong>, I'm a <strong>Web Developer</strong> with
+                a design background, I'm passionate about the web and its wonders and mysteries.
+                <em> Perfectionist</em>, <em>Enthusiastic</em> and always <em title="After having my morning coffee ☕😏"
+                    class="for__fun">Optimistic</em>.
+            </p>
+            <button class="btn">My CV</button>
+        </div>
+        <div class="main-img">
+            <img src="img/main_illustration.svg" alt="">
+        </div>
     </main>
+    <h1 class="bg-text">I MAKE WEBSITES</h1>
     <script src="main.js"></script>
 </body>
+
 </html>
