added the button styles

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <em> Perfectionist</em>, <em>Enthusiastic</em> and always <em title="After having my morning coffee ☕😏"
                     class="for__fun">Optimistic</em>.
             </p>
-            <button class="btn">My CV</button>
+            <button class="btn btn-primary btn-cv">My CV</button>
         </div>
         <div class="main-img">
             <img src="img/main_illustration.svg" alt="">
