made the main section responsive

--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
             </p>
             <button class="btn btn-primary btn-cv">My CV</button>
         </div>
-        <div class="main-img">
-            <img src="img/main_illustration.svg" alt="">
-        </div>
+        <img src="img/main_illustration.svg" alt="" class="main-img">
     </main>
     <h1 class="bg-text">I MAKE WEBSITES</h1>
     <script src="main.js"></script>
