main section is done

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     </nav>
     <main class="intro">
-        <div class="intro-text">
+        <div class="intro-content">
             <h1 class="intro-title">Hi There !</h1>
             <p class="intro-text">
                 My name is <strong>Yosra Skhiri</strong>, I'm a <strong>Web Developer</strong> with
@@ -42,7 +42,7 @@
         </div>
         <img src="img/main_illustration.svg" alt="" class="main-img">
     </main>
-    <h1 class="bg-text">I MAKE WEBSITES</h1>
+    <img src="img/background.svg" alt="" class="bg-text">
     <script src="main.js"></script>
 </body>
 
