added the contact icons

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <li class="nav-link"><a href="#"><span>About me</span></a></li>
             <li class="nav-link"><a href="#"><span>Skills</span></a></li>
             <li class="nav-link"><a href="#"><span>projects</span></a></li>
-            <!--<li class="social-icons">
+            <li class="social-icons">
                 <ul>
-                    <li><a href=""><img src="img/github_icon.svg" alt=""></a></li>
-                    <li><a href=""><img src="img/linkedin_icon.svg" alt=""></a></li>
-                    <li><a href=""><img src="img/mail_icon.svg" alt=""></a></li>
+                    <li><a href="#"><img src="img/github_icon.svg" alt=""></a></li>
+                    <li><a href="#"><img src="img/linkedin_icon.svg" alt=""></a></li>
+                    <li><a href="#"><img src="img/mail_icon.svg" alt=""></a></li>
                 </ul>
-            </li>-->
+            </li>
         </ul>
 
     </nav>
