--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <em> Perfectionist</em>, <em>Enthusiastic</em> and always <em title="After having my morning coffee ☕😏"
                     class="for__fun">Optimistic</em>.
             </p>
-            <button class="btn btn-primary btn-cv">My CV</button>
+            <a class="btn btn-primary btn-cv" href="files/Yosra_Skhiri.pdf"><span>My CV</span></a>
         </div>
         <img src="img/main_illustration.svg" alt="" class="main-img">
     </main>
