added the night mode icon

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
             <li class="nav-link"><a href="#"><span>projects</span></a></li>
             <li class="social-icons">
                 <ul>
-                    <li><a href="#"><img src="img/github_icon.svg" alt=""></a></li>
+                    <li><a href="https://github.com/YosraSkhiri"><img src="img/github_icon.svg" alt=""></a></li>
                     <li><a href="#"><img src="img/linkedin_icon.svg" alt=""></a></li>
                     <li><a href="#"><img src="img/mail_icon.svg" alt=""></a></li>
                 </ul>
             </li>
+            <li><img src="img/Night_mode.svg" alt="" class="mode-icon"></li>
         </ul>
 
     </nav>
