added the content ans some styles to the about page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </ul>
 
     </nav>
-    <main class="intro">
+    <main class="container intro">
         <div class="intro-content">
             <h1 class="intro-title">Hi There !</h1>
             <p class="intro-text">
