--- a/about.html
+++ b/about.html
@@ -30,8 +30,42 @@
         </ul>
     </nav>
     
-    <main class="container">
-
+    <main class="container about-section">
+        <div class="edu">
+            <h1 class="intro-title about-title">Education</h1>
+            <div class="details">
+                <h2 class="details-date">2019 - 2020</h2>
+                <div class="details-text">
+                    <h2 class="details-title">Lorem ipsum dolor sit</h2>
+                    <p class="details-content">consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                </div>
+            </div>
+            <div class="details">
+                <h2 class="details-date">2019 - 2020</h2>
+                <div class="details-text">
+                    <h2 class="details-title">Lorem ipsum dolor sit</h2>
+                    <p class="details-content">consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                </div>
+            </div>
+            <div class="details">
+                <h2 class="details-date">2019 - 2020</h2>
+                <div class="details-text">
+                    <h2 class="details-title">Lorem ipsum dolor sit</h2>
+                    <p class="details-content">consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                </div>
+            </div>
+           
+        </div>
+        <div class="job">
+            <h1 class="intro-title about-title">Job Experience</h1>
+            <div class="details">
+                <h2 class="details-date">2019 - 2020</h2>
+                <div class="details-text">
+                    <h2 class="details-title">Lorem ipsum dolor sit</h2>
+                    <p class="details-content">consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                </div>
+            </div>
+        </div>
     </main>
 
     <script src="main.js"></script>
