--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 
 <body>
     <nav>
-        <div class="logo"><span>Yosra</span><span>Skhiri</span></div>
+        <div class="logo"><a href="/index.html"><span>Yosra</span><span>Skhiri</span></a></div>
         <div id="hamburger">
             <span id="line"></span>
         </div>
         <ul class="nav-links">
-            <li class="nav-link"><a href="#"><span>Home</span></a></li>
-            <li class="nav-link"><a href="#"><span>About me</span></a></li>
+            <li class="nav-link"><a href="/index.html"><span>Home</span></a></li>
+            <li class="nav-link"><a href="/about.html"><span>About me</span></a></li>
             <li class="nav-link"><a href="#"><span>Skills</span></a></li>
             <li class="nav-link"><a href="#"><span>projects</span></a></li>
             <li class="social-icons">
                 <ul>
                     <li><a href="https://github.com/YosraSkhiri"><img src="img/github_icon.svg" alt=""></a></li>
-                    <li><a href="#"><img src="img/linkedin_icon.svg" alt=""></a></li>
+                    <li><a href="https://www.linkedin.com/in/yosra-skhiri"><img src="img/linkedin_icon.svg" alt=""></a></li>
                     <li><a href="#"><img src="img/mail_icon.svg" alt=""></a></li>
                 </ul>
             </li>
