the about page is completed

--- a/about.html
+++ b/about.html
@@ -72,6 +72,9 @@
             </div>
         </div>
         </div>
+        <img src="img/computer_bg.svg" alt="" class="computer-bg">
+        <img src="img/left_illu.svg" alt="" class="left-illu">
+        <img src="img/right_illu.svg" alt="" class="right-illu">
     </main>
 
     <script src="main.js"></script>
