added the other pages

--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
         <ul class="nav-links">
             <li class="nav-link"><a href="/index.html"><span>Home</span></a></li>
             <li class="nav-link"><a href="/about.html"><span>About me</span></a></li>
-            <li class="nav-link"><a href="#"><span>Skills</span></a></li>
-            <li class="nav-link"><a href="#"><span>projects</span></a></li>
+            <li class="nav-link"><a href="/skills.html"><span>Skills</span></a></li>
+            <li class="nav-link"><a href="/projects.html"><span>projects</span></a></li>
             <li class="social-icons">
                 <ul>
                     <li><a href="https://github.com/YosraSkhiri"><img src="img/github_icon.svg" alt=""></a></li>
