--- a/skills.html
+++ b/skills.html
@@ -28,22 +28,15 @@
             </li>
             <li><img src="img/Night_mode.svg" alt="" class="mode-icon"></li>
         </ul>
-
     </nav>
-    <main class="container intro">
-        <div class="intro-content">
-            <h1 class="intro-title">Hi There !</h1>
-            <p class="intro-text">
-                My name is <strong>Yosra Skhiri</strong>, I'm a <strong>Web Developer</strong> with
-                a design background, I'm passionate about the web and its wonders and mysteries.
-                <em> Perfectionist</em>, <em>Enthusiastic</em> and always <em title="After having my morning coffee ☕😏"
-                    class="for__fun">Optimistic</em>.
-            </p>
-            <a class="btn btn-primary btn-cv" href="files/Yosra_Skhiri.pdf"><span>My CV</span></a>
-        </div>
-        <img src="img/main_illustration.svg" alt="" class="main-img">
+    
+    <main class="container">
+        
+        <img src="img/computer_bg.svg" alt="" class="computer-bg">
+        <img src="img/left_illu.svg" alt="" class="left-illu">
+        <img src="img/right_illu.svg" alt="" class="right-illu">
     </main>
-    <img src="img/background.svg" alt="" class="bg-text">
+
     <script src="main.js"></script>
 </body>
 
