added the text content in the about page and fixed some issues

--- a/about.html
+++ b/about.html
@@ -22,55 +22,60 @@
             <li class="social-icons">
                 <ul>
                     <li><a href="https://github.com/YosraSkhiri"><img src="img/github_icon.svg" alt=""></a></li>
-                    <li><a href="https://www.linkedin.com/in/yosra-skhiri"><img src="img/linkedin_icon.svg" alt=""></a></li>
+                    <li><a href="https://www.linkedin.com/in/yosra-skhiri"><img src="img/linkedin_icon.svg" alt=""></a>
+                    </li>
                     <li><a href="#"><img src="img/mail_icon.svg" alt=""></a></li>
                 </ul>
             </li>
             <li><img src="img/Night_mode.svg" alt="" class="mode-icon"></li>
         </ul>
     </nav>
-    
+
     <main class="container about-section">
         <div class="edu">
             <div class="mobile-titles">
-            <h1 class="intro-title about-title" id="edu">Education</h1>
-            <h1 class="intro-title about-title mobile-title" id="job">Job Experience</h1>
+                <h1 class="intro-title about-title" id="edu">Education</h1>
+                <h1 class="intro-title about-title mobile-title" id="job">Job Experience</h1>
             </div>
             <div id="edu-content">
-            <div class="details">
-                <h2 class="details-date">2019 - 2020</h2>
-                <div class="details-text">
-                    <h2 class="details-title">Lorem ipsum dolor sit</h2>
-                    <p class="details-content">consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                <div class="details">
+                    <h2 class="details-date">2019 - 2020</h2>
+                    <div class="details-text">
+                        <h2 class="details-title">Professional Masters in Media Engineering
+                        </h2>
+                        <p class="details-content">Manouba Higher Institute of Multimedia Arts
+                        </p>
+                    </div>
+                </div>
+                <div class="details">
+                    <h2 class="details-date">2016 - 2019</h2>
+                    <div class="details-text">
+                        <h2 class="details-title">Basic License in Computer Science and Multimedia</h2>
+                        <p class="details-content">Manouba Higher Institute of Multimedia Arts
+                        </p>
+                    </div>
+                </div>
+                <div class="details">
+                    <h2 class="details-date">2015 - 2016</h2>
+                    <div class="details-text">
+                        <h2 class="details-title">Bachelor in Mathematical Sciences</h2>
+                        <p class="details-content">Rue El Attarine High school</p>
+                    </div>
                 </div>
             </div>
-            <div class="details">
-                <h2 class="details-date">2019 - 2020</h2>
-                <div class="details-text">
-                    <h2 class="details-title">Lorem ipsum dolor sit</h2>
-                    <p class="details-content">consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
-                </div>
-            </div>
-            <div class="details">
-                <h2 class="details-date">2019 - 2020</h2>
-                <div class="details-text">
-                    <h2 class="details-title">Lorem ipsum dolor sit</h2>
-                    <p class="details-content">consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
-                </div>
-            </div>
-        </div>  
         </div>
         <div class="job">
             <h1 class="intro-title about-title">Job Experience</h1>
-        <div id="job-content">
-            <div class="details">
-                <h2 class="details-date">2019 - 2020</h2>
-                <div class="details-text">
-                    <h2 class="details-title">Lorem ipsum dolor sit</h2>
-                    <p class="details-content">consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+            <div id="job-content">
+                <div class="details">
+                    <h2 class="details-date">2019 - 2019</h2>
+                    <div class="details-text">
+                        <h2 class="details-title">Internship in Medianet</h2>
+                        <p class="details-content">End of studies project: Online booking platform for
+                            non-hotel holiday accommodation</p>
+                    </div>
                 </div>
             </div>
-        </div>
         </div>
         <img src="img/computer_bg.svg" alt="" class="computer-bg">
         <img src="img/left_illu.svg" alt="" class="left-illu">
