--- a/projects.html
+++ b/projects.html
@@ -30,8 +30,24 @@
         </ul>
     </nav>
     
-    <main class="container">
-        
+    <main class="container projects">
+        <div class="project-card">
+            <img src="img/placeholder.png" alt="" class="card-img">
+            <div class="card-content">
+                <h2 class="card-date">11 january 2019</h2>
+                <h1 class="card-title">Lorem ipsum dolor sit amet</h1>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing 
+                    elit, sed do eiusmod tempor incididunt ut labore et 
+                    dolore magna aliqua. Ut enim ad minim veniam, quis 
+                    nostrud.</p>
+                <div class="tech-icons"></div>
+                <div class="buttons-card">
+                    <a href="#" class="btn btn-primary btn-card"><span>Code</span></a>
+                    <a href="#" class="btn btn-secondary btn-card"><span>Demo</span></a>
+                </div>
+            </div>
+        </div>
+
         <img src="img/computer_bg.svg" alt="" class="computer-bg">
         <img src="img/left_illu.svg" alt="" class="left-illu">
         <img src="img/right_illu.svg" alt="" class="right-illu">
