still working on the projects page

--- a/projects.html
+++ b/projects.html
@@ -32,26 +32,85 @@
     
     <main class="container projects">
         <div class="project-card">
-            <img src="img/placeholder.png" alt="" class="card-img">
+            <img src="img/Untitled-6.jpg" alt="" class="card-img">
             <div class="card-content">
-                <h2 class="card-date">11 january 2019</h2>
-                <h1 class="card-title">Lorem ipsum dolor sit amet</h1>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing 
-                    elit, sed do eiusmod tempor incididunt ut labore et 
-                    dolore magna aliqua. Ut enim ad minim veniam, quis 
-                    nostrud.</p>
-                <div class="tech-icons"></div>
+                <h2 class="card-date">14 March 2020</h2>
+                <h1 class="card-title">My Portfolio</h1>
+                <p class="card-text">I made this portfolio from scratch, designed it using Adobe XD and
+                    coded it using HTML5, CSS and javaScript.
+                </p>
+                <div class="tech-icons">
+                    <img src="img/css.jpg" alt="">
+                    <img src="img/html5.jpg" alt="">
+                    <img src="img/JavaScript.jpg" alt="">
+                </div>
                 <div class="buttons-card">
                     <a href="#" class="btn btn-primary btn-card"><span>Code</span></a>
                     <a href="#" class="btn btn-secondary btn-card"><span>Demo</span></a>
                 </div>
             </div>
         </div>
-
-        <img src="img/computer_bg.svg" alt="" class="computer-bg">
+        <div class="project-card">
+            <img src="img/Untitled-6.jpg" alt="" class="card-img">
+            <div class="card-content">
+                <h2 class="card-date">14 March 2020</h2>
+                <h1 class="card-title">My Portfolio</h1>
+                <p class="card-text">I made this portfolio from scratch, designed it using Adobe XD and
+                    coded it using HTML5, CSS and javaScript.
+                </p>
+                <div class="tech-icons">
+                    <img src="img/css.jpg" alt="">
+                    <img src="img/html5.jpg" alt="">
+                    <img src="img/JavaScript.jpg" alt="">
+                </div>
+                <div class="buttons-card">
+                    <a href="#" class="btn btn-primary btn-card"><span>Code</span></a>
+                    <a href="#" class="btn btn-secondary btn-card"><span>Demo</span></a>
+                </div>
+            </div>
+        </div>
+        <div class="project-card">
+            <img src="img/Untitled-6.jpg" alt="" class="card-img">
+            <div class="card-content">
+                <h2 class="card-date">14 March 2020</h2>
+                <h1 class="card-title">My Portfolio</h1>
+                <p class="card-text">I made this portfolio from scratch, designed it using Adobe XD and
+                    coded it using HTML5, CSS and javaScript.
+                </p>
+                <div class="tech-icons">
+                    <img src="img/css.jpg" alt="">
+                    <img src="img/html5.jpg" alt="">
+                    <img src="img/JavaScript.jpg" alt="">
+                </div>
+                <div class="buttons-card">
+                    <a href="#" class="btn btn-primary btn-card"><span>Code</span></a>
+                    <a href="#" class="btn btn-secondary btn-card"><span>Demo</span></a>
+                </div>
+            </div>
+        </div>
+        <div class="project-card">
+            <img src="img/Untitled-6.jpg" alt="" class="card-img">
+            <div class="card-content">
+                <h2 class="card-date">14 March 2020</h2>
+                <h1 class="card-title">My Portfolio</h1>
+                <p class="card-text">I made this portfolio from scratch, designed it using Adobe XD and
+                    coded it using HTML5, CSS and javaScript.
+                </p>
+                <div class="tech-icons">
+                    <img src="img/css.jpg" alt="">
+                    <img src="img/html5.jpg" alt="">
+                    <img src="img/JavaScript.jpg" alt="">
+                </div>
+                <div class="buttons-card">
+                    <a href="#" class="btn btn-primary btn-card"><span>Code</span></a>
+                    <a href="#" class="btn btn-secondary btn-card"><span>Demo</span></a>
+                </div>
+            </div>
+        </div>
+    </main>
+    <img src="img/computer_bg.svg" alt="" class="computer-bg">
         <img src="img/left_illu.svg" alt="" class="left-illu">
         <img src="img/right_illu.svg" alt="" class="right-illu">
-    </main>
 
     <script src="main.js"></script>
 </body>
