--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,9 @@
     
     <main class="container projects">
         <div class="project-card">
-            <img src="img/projects/Untitled-6.jpg" alt="" class="card-img">
+            <div class="card-img-container">
+                <img src="img/projects/portfolio.png" alt="" class="card-img">
+            </div>
             <div class="card-content">
                 <h2 class="card-date">14 March 2020</h2>
                 <h1 class="card-title">My Portfolio</h1>
@@ -45,7 +47,49 @@
                     <img src="img/tools/JavaScript.jpg" alt="">
                 </div>
                 <div class="buttons-card">
-                    <a href="#" class="btn btn-primary btn-card btn-primary-"><span>Code</span></a>
+                    <a href="#" class="btn btn-primary btn-card"><span>Code</span></a>
+                    <a href="#" class="btn btn-secondary btn-card"><span>Demo</span></a>
+                </div>
+            </div>
+        </div>
+        <div class="project-card">
+            <div class="card-img-container">
+                <img src="img/projects/portfolio.png" alt="" class="card-img">
+            </div>
+            <div class="card-content">
+                <h2 class="card-date">14 March 2020</h2>
+                <h1 class="card-title">My Portfolio</h1>
+                <p class="card-text">I made this portfolio from scratch, designed it using Adobe XD and
+                    coded it using HTML5, CSS and javaScript.
+                </p>
+                <div class="tech-icons">
+                    <img src="img/tools/css.jpg" alt="">
+                    <img src="img/tools/html5.jpg" alt="">
+                    <img src="img/tools/JavaScript.jpg" alt="">
+                </div>
+                <div class="buttons-card">
+                    <a href="#" class="btn btn-primary btn-card"><span>Code</span></a>
+                    <a href="#" class="btn btn-secondary btn-card"><span>Demo</span></a>
+                </div>
+            </div>
+        </div>
+        <div class="project-card">
+            <div class="card-img-container">
+                <img src="img/projects/portfolio.png" alt="" class="card-img">
+            </div>
+            <div class="card-content">
+                <h2 class="card-date">14 March 2020</h2>
+                <h1 class="card-title">My Portfolio</h1>
+                <p class="card-text">I made this portfolio from scratch, designed it using Adobe XD and
+                    coded it using HTML5, CSS and javaScript.
+                </p>
+                <div class="tech-icons">
+                    <img src="img/tools/css.jpg" alt="">
+                    <img src="img/tools/html5.jpg" alt="">
+                    <img src="img/tools/JavaScript.jpg" alt="">
+                </div>
+                <div class="buttons-card">
+                    <a href="#" class="btn btn-primary btn-card"><span>Code</span></a>
                     <a href="#" class="btn btn-secondary btn-card"><span>Demo</span></a>
                 </div>
             </div>
