almost finishing the skills page

--- a/skills.html
+++ b/skills.html
@@ -22,37 +22,56 @@
             <li class="social-icons">
                 <ul>
                     <li><a href="https://github.com/YosraSkhiri"><img src="img/github_icon.svg" alt=""></a></li>
-                    <li><a href="https://www.linkedin.com/in/yosra-skhiri"><img src="img/linkedin_icon.svg" alt=""></a></li>
+                    <li><a href="https://www.linkedin.com/in/yosra-skhiri"><img src="img/linkedin_icon.svg" alt=""></a>
+                    </li>
                     <li><a href="#"><img src="img/mail_icon.svg" alt=""></a></li>
                 </ul>
             </li>
             <li><img src="img/Night_mode.svg" alt="" class="mode-icon"></li>
         </ul>
     </nav>
-    
+
     <main class="container">
-        <h1>Here's What I can do</h1>
+        <h1 class="skill-title">Here's What I can do</h1>
         <div class="skill-container">
-            <div class="skill-title">
-                <h2>Front-end</h2>
-                <h2>Back-end</h2>
-                <h2>Design Tools</h2>
-            </div>
-            <div class="skills">
-                <div class="front-skills">
-                    <div>
-                        <p>HTML5</p>
-                        <p>CSS</p>
-                        <p>JavaScript</p>
-                    </div>
-                    <div>
-                        <p>Bootstrap</p>
-                        <p>jQuery</p>
-                        <p>ReactJs</p>
-                    </div>
+            <div class="detailed-skills">
+                <h2 class="intro-title">Front-end</h2>
+                <div class="items">
+                    <ul>
+                        <li>HTML5</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                    </ul>
+                    <ul>
+                        <li>Sass</li>
+                        <li>jQuery</li>
+                        <li>ReactJs</li>
+                    </ul>
                 </div>
             </div>
-            
+            <div class="detailed-skills">
+                <h2 class="intro-title">Back-end</h2>
+                <div class="items">
+                    <ul>
+                        <li>PHP</li>
+                        <li>Laravel</li>
+                        <li>mySQL</li>
+                    </ul>
+                    <ul>
+                        <li>Git</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="detailed-skills">
+                <h2 class="intro-title">Design Tools</h2>
+                <div class="items">
+                    <ul>
+                        <li>Photoshop</li>
+                        <li>Illustrator</li>
+                        <li>Adobe XD</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </main>
     <img src="img/computer_bg.svg" alt="" class="computer-bg">
