added the responsive version

--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
                     <li><a href="#"><img src="img/mail_icon.svg" alt=""></a></li>
                 </ul>
             </li>
-            <li><img src="img/Night_mode.svg" alt="" class="mode-icon"></li>
+            <li id="mode"><img src="img/Night_mode.svg" alt="" class="mode-icon"></li>
         </ul>
     </nav>
     
