--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                     <li><a href="https://github.com/YosraSkhiri"><img src="img/github_icon.svg" alt=""></a></li>
                     <li><a href="https://www.linkedin.com/in/yosra-skhiri"><img src="img/linkedin_icon.svg" alt=""></a>
                     </li>
-                    <li><a href="#"><img src="img/mail_icon.svg" alt=""></a></li>
+                    <li><a href="mailto:yosra.skhiri.mail@gmail.com"><img src="img/mail_icon.svg" alt=""></a></li>
                 </ul>
             </li>
             <li id="mode"><img src="img/Night_mode.svg" alt="" class="mode-icon"></li>
