cleaned up the code

--- a/about.html
+++ b/about.html
@@ -10,32 +10,32 @@
 
 <body>
     <nav>
-        <div class="logo"><a href="/index.html"><span>Yosra</span><span>Skhiri</span></a></div>
+        <div class="logo"><a href="index.html"><span>Yosra</span><span>Skhiri</span></a></div>
         <div id="hamburger">
             <span id="line"></span>
         </div>
         <ul class="nav-links">
-            <li class="nav-link"><a href="/index.html"><span>Home</span></a></li>
-            <li class="nav-link"><a href="/about.html"><span>About me</span></a></li>
-            <li class="nav-link"><a href="/skills.html"><span>Skills</span></a></li>
-            <li class="nav-link"><a href="/projects.html"><span>projects</span></a></li>
+            <li class="nav-link"><a href="index.html"><span>Home</span></a></li>
+            <li class="nav-link"><a href="about.html"><span>About me</span></a></li>
+            <li class="nav-link"><a href="skills.html"><span>Skills</span></a></li>
+            <li class="nav-link"><a href="projects.html"><span>projects</span></a></li>
             <li class="social-icons">
                 <ul>
-                    <li><a href="https://github.com/YosraSkhiri"><img src="img/github_icon.svg" alt=""></a></li>
-                    <li><a href="https://www.linkedin.com/in/yosra-skhiri"><img src="img/linkedin_icon.svg" alt=""></a>
+                    <li><a href="https://github.com/YosraSkhiri"><img src="img/github_icon.svg" alt="GitHub icon"></a></li>
+                    <li><a href="https://www.linkedin.com/in/yosra-skhiri"><img src="img/linkedin_icon.svg" alt="Linkedin logo"></a>
                     </li>
-                    <li><a href="mailto:yosra.skhiri.mail@gmail.com"><img src="img/mail_icon.svg" alt=""></a></li>
+                    <li><a href="mailto:yosra.skhiri.mail@gmail.com"><img src="img/mail_icon.svg" alt="Mail icon"></a></li>
                 </ul>
             </li>
-            <li id="mode"><img src="img/Night_mode.svg" alt="" class="mode-icon"></li>
+            <li id="mode"><img src="img/Night_mode.svg" alt="Mode icon" class="mode-icon"></li>
         </ul>
     </nav>
 
-    <main class="container about-section">
-        <div class="edu">
+    <main class="container about-container">
+        <div class="edus-content">
             <div class="mobile-titles">
-                <h1 class="intro-title about-title" id="edu">Education</h1>
-                <h1 class="intro-title about-title mobile-title" id="job">Job Experience</h1>
+                <h1 class="default-title about-title" id="edu">Education</h1>
+                <h1 class="default-title about-title mobile-title" id="job">Job Experience</h1>
             </div>
             <div id="edu-content">
                 <div class="details">
@@ -64,13 +64,13 @@
                 </div>
             </div>
         </div>
-        <div class="job">
-            <h1 class="intro-title about-title">Job Experience</h1>
+        <div class="jobs-content">
+            <h1 class="default-title about-title">Job Experience</h1>
             <div id="job-content">
                 <div class="details">
                     <h2 class="details-date">2019 - 2019</h2>
                     <div class="details-text">
-                        <h2 class="details-title">Internship in Medianet</h2>
+                        <h2 class="details-title">Internship at Medianet</h2>
                         <p class="details-content">End of studies project: Online booking platform for
                             non-hotel holiday accommodation</p>
                     </div>
@@ -79,9 +79,9 @@
         </div>
         
     </main>
-    <img src="img/computer_bg.svg" alt="" class="computer-bg">
-    <img src="img/left_illu.svg" alt="" class="left-illu">
-    <img src="img/right_illu.svg" alt="" class="right-illu">
+    <img src="img/computer_bg.svg" alt="Computer" class="computer-bg">
+    <img src="img/left_illu.svg" alt="Abstract Shapes" class="left-illu">
+    <img src="img/right_illu.svg" alt="Abstract Shapes" class="right-illu">
     <script src="main.js"></script>
 </body>
 
