--- a/index.html
+++ b/index.html
@@ -10,40 +10,44 @@
 
 <body>
     <nav>
-        <div class="logo"><a href="/index.html"><span>Yosra</span><span>Skhiri</span></a></div>
+        <div class="logo"><a href="index.html"><span>Yosra</span><span>Skhiri</span></a></div>
         <div id="hamburger">
             <span id="line"></span>
         </div>
         <ul class="nav-links">
-            <li class="nav-link"><a href="/index.html"><span>Home</span></a></li>
-            <li class="nav-link"><a href="/about.html"><span>About me</span></a></li>
-            <li class="nav-link"><a href="/skills.html"><span>Skills</span></a></li>
-            <li class="nav-link"><a href="/projects.html"><span>projects</span></a></li>
+            <li class="nav-link"><a href="index.html"><span>Home</span></a></li>
+            <li class="nav-link"><a href="about.html"><span>About me</span></a></li>
+            <li class="nav-link"><a href="skills.html"><span>Skills</span></a></li>
+            <li class="nav-link"><a href="projects.html"><span>projects</span></a></li>
             <li class="social-icons">
                 <ul>
-                    <li><a href="https://github.com/YosraSkhiri"><img src="img/github_icon.svg" alt=""></a></li>
-                    <li><a href="https://www.linkedin.com/in/yosra-skhiri"><img src="img/linkedin_icon.svg" alt=""></a></li>
-                    <li><a href="mailto:yosra.skhiri.mail@gmail.com"><img src="img/mail_icon.svg" alt=""></a></li>
+                    <li><a href="https://github.com/YosraSkhiri"><img src="img/github_icon.svg" alt="GitHub logo"></a>
+                    </li>
+                    <li><a href="https://www.linkedin.com/in/yosra-skhiri"><img src="img/linkedin_icon.svg"
+                                alt="Linkedin logo"></a></li>
+                    <li><a href="mailto:yosra.skhiri.mail@gmail.com"><img src="img/mail_icon.svg" alt="Mail icon"></a>
+                    </li>
                 </ul>
             </li>
-            <li id="mode"><img src="img/Night_mode.svg" alt="" class="mode-icon"></li>
+            <li id="mode"><img src="img/Night_mode.svg" alt="Mode icon" class="mode-icon"></li>
         </ul>
 
     </nav>
-    <main class="container intro">
+    <main class="container intro-container">
         <div class="intro-content">
-            <h1 class="intro-title">Hi There !</h1>
+            <h1 class="default-title">Hi There !</h1>
             <p class="intro-text">
                 My name is <strong>Yosra Skhiri</strong>, I'm a <strong>Web Developer</strong> with
                 a design background, I'm passionate about the web and its wonders and mysteries.
-                <em> Perfectionist</em>, <em>Enthusiastic</em> and always <em title="After having my morning coffee ☕😏"
-                    class="for__fun">Optimistic</em>.
+                <em> Perfectionist</em>, <em>Enthusiastic</em> and always <em
+                    title="After having my morning coffee ☕😏">
+                    Optimistic</em>.
             </p>
             <a class="btn btn-primary btn-cv" href="files/Yosra_Skhiri.pdf"><span>My CV</span></a>
         </div>
-        <img src="img/main_illustration.svg" alt="" class="main-img">
+        <img src="img/main_illustration.svg" alt="Computer" class="intro-img">
     </main>
-    <img src="img/background.svg" alt="" class="bg-text">
+    <img src="img/background.svg" alt="I MAKE WEBSITES" class="bg-text">
     <script src="main.js"></script>
 </body>
 
