--- a/skills.html
+++ b/skills.html
@@ -10,24 +10,24 @@
 
 <body>
     <nav>
-        <div class="logo"><a href="/index.html"><span>Yosra</span><span>Skhiri</span></a></div>
+        <div class="logo"><a href="index.html"><span>Yosra</span><span>Skhiri</span></a></div>
         <div id="hamburger">
             <span id="line"></span>
         </div>
         <ul class="nav-links">
-            <li class="nav-link"><a href="/index.html"><span>Home</span></a></li>
-            <li class="nav-link"><a href="/about.html"><span>About me</span></a></li>
-            <li class="nav-link"><a href="/skills.html"><span>Skills</span></a></li>
-            <li class="nav-link"><a href="/projects.html"><span>projects</span></a></li>
+            <li class="nav-link"><a href="index.html"><span>Home</span></a></li>
+            <li class="nav-link"><a href="about.html"><span>About me</span></a></li>
+            <li class="nav-link"><a href="skills.html"><span>Skills</span></a></li>
+            <li class="nav-link"><a href="projects.html"><span>projects</span></a></li>
             <li class="social-icons">
                 <ul>
-                    <li><a href="https://github.com/YosraSkhiri"><img src="img/github_icon.svg" alt=""></a></li>
-                    <li><a href="https://www.linkedin.com/in/yosra-skhiri"><img src="img/linkedin_icon.svg" alt=""></a>
+                    <li><a href="https://github.com/YosraSkhiri"><img src="img/github_icon.svg" alt="GitHub logo"></a></li>
+                    <li><a href="https://www.linkedin.com/in/yosra-skhiri"><img src="img/linkedin_icon.svg" alt="Linkedin logo"></a>
                     </li>
-                    <li><a href="mailto:yosra.skhiri.mail@gmail.com"><img src="img/mail_icon.svg" alt=""></a></li>
+                    <li><a href="mailto:yosra.skhiri.mail@gmail.com"><img src="img/mail_icon.svg" alt="Mail icon"></a></li>
                 </ul>
             </li>
-            <li id="mode"><img src="img/Night_mode.svg" alt="" class="mode-icon"></li>
+            <li id="mode"><img src="img/Night_mode.svg" alt="Mode icon" class="mode-icon"></li>
         </ul>
     </nav>
 
@@ -35,7 +35,7 @@
         <h1 class="skill-title">Here's What I can do</h1>
         <div class="skill-container">
             <div class="detailed-skills">
-                <h2 class="intro-title">Front-end</h2>
+                <h2 class="default-title">Front-end</h2>
                 <div class="items">
                     <ul>
                         <li>HTML5</li>
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="detailed-skills">
-                <h2 class="intro-title">Back-end</h2>
+                <h2 class="default-title">Back-end</h2>
                 <div class="items">
                     <ul>
                         <li>PHP</li>
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="detailed-skills">
-                <h2 class="intro-title">Design Tools</h2>
+                <h2 class="default-title">Design Tools</h2>
                 <div class="items">
                     <ul>
                         <li>Photoshop</li>
@@ -74,9 +74,9 @@
             </div>
         </div>
     </main>
-    <img src="img/computer_bg.svg" alt="" class="computer-bg">
-    <img src="img/left_illu.svg" alt="" class="left-illu">
-    <img src="img/right_illu.svg" alt="" class="right-illu">
+    <img src="img/computer_bg.svg" alt="Computer" class="computer-bg">
+    <img src="img/left_illu.svg" alt="Abstract Shapes" class="left-illu">
+    <img src="img/right_illu.svg" alt="Abstract Shapes" class="right-illu">
     <script src="main.js"></script>
 </body>
 
