added animation to the main page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
             </p>
             <a class="btn btn-primary btn-cv" href="files/Yosra_Skhiri.pdf"><span>My CV</span></a>
         </div>
-        <img src="img/main_illustration.svg" alt="Computer" class="intro-img">
+        <div class="intro-img-container">
+            <img src="img/left_illu.svg" alt="Abstract Shapes" class="main-left-illu" id="left-illu">
+            <img src="img/right_illu.svg" alt="Abstract Shapes" class="main-right-illu" id="right-illu">
+            <img src="img/main_illustration.svg" alt="Computer" class="intro-img" id="computer">
+        </div>
+        
     </main>
     <img src="img/background.svg" alt="I MAKE WEBSITES" class="bg-text">
     <script src="main.js"></script>
