fixed the about page

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
         <div class="edus-content">
             <div class="mobile-titles">
                 <h1 class="default-title about-title" id="edu">Education</h1>
-                <h1 class="default-title about-title mobile-title" id="job">Job Experience</h1>
+                <h1 class="default-title about-title mobile-title inactive-tab" id="job">Job Experience</h1>
             </div>
             <div id="edu-content">
                 <div class="details">
