making progress on the dark mode

--- a/about.html
+++ b/about.html
@@ -82,8 +82,8 @@
         
     </main>
     <img src="img/computer_bg.svg" alt="Computer" class="computer-bg">
-    <img src="img/left_illu.svg" alt="Abstract Shapes" class="left-illu">
-    <img src="img/right_illu.svg" alt="Abstract Shapes" class="right-illu">
+    <img src="img/left_illu.svg" alt="Abstract Shapes" class="left-illu" id="left-illu">
+    <img src="img/right_illu.svg" alt="Abstract Shapes" class="right-illu" id="right-illu">
     <script src="main.js"></script>
 </body>
 
