--- a/skills.html
+++ b/skills.html
@@ -23,10 +23,10 @@
             <li class="nav-link"><a href="projects.html"><span>projects</span></a></li>
             <li class="social-icons">
                 <ul>
-                    <li><a href="https://github.com/YosraSkhiri"><img src="img/github_icon.svg" alt="GitHub logo"></a></li>
-                    <li><a href="https://www.linkedin.com/in/yosra-skhiri"><img src="img/linkedin_icon.svg" alt="Linkedin logo"></a>
+                    <li><a href="https://github.com/YosraSkhiri"><img src="img/github_icon.svg" alt="GitHub logo" id="github"></a></li>
+                    <li><a href="https://www.linkedin.com/in/yosra-skhiri"><img src="img/linkedin_icon.svg" alt="Linkedin logo" id="linkedin"></a>
                     </li>
-                    <li><a href="mailto:yosra.skhiri.mail@gmail.com"><img src="img/mail_icon.svg" alt="Mail icon"></a></li>
+                    <li><a href="mailto:yosra.skhiri.mail@gmail.com"><img src="img/mail_icon.svg" alt="Mail icon" id="mail"></a></li>
                 </ul>
             </li>
             <li id="mode"><img src="img/Night_mode.svg" alt="Mode icon" class="mode-icon"></li>
