added the active nav link class

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <span id="line"></span>
         </div>
         <ul class="nav-links">
-            <li class="nav-link"><a href="index.html"><span>Home</span></a></li>
+            <li class="nav-link"><a href="index.html"><span class="active">Home</span></a></li>
             <li class="nav-link"><a href="about.html"><span>About me</span></a></li>
             <li class="nav-link"><a href="skills.html"><span>Skills</span></a></li>
             <li class="nav-link"><a href="projects.html"><span>projects</span></a></li>
